--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="logo logo_header">
             <div class="logo_content">
-                <a href="/pages/main/index.html">
+                <a href="../../pages/main/index.html">
                     <h1 class="logo-PetStory">PetStory online</h1>
                     <img class="bamboo" src="../../assets/images/bamboo.svg" alt="bamboo">
                 </a>
@@ -25,7 +25,7 @@
                 <li class="nav_item"> <a class="nav-item-active__link" href="#">About</a> </li>
                 <li class="nav_item"> <a class="nav-item__link" href="#">Map</a> </li>
                 <li class="nav_item"> <a class="nav-item__link" href="#">Zoos</a> </li>
-                <li class="nav_item"> <a class="nav-item__link" href="#">Donate</a> </li>
+                <li class="nav_item"> <a class="nav-item__link" href="../../pages/donate/donate.html">Donate</a> </li>
                 <li class="nav_item"> <a class="nav-item__link" href="#">Contact us</a> </li>
             </ul>
         </nav>
@@ -149,7 +149,8 @@
             <p class="pick_text_2">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud
                 and glad that people around the world find joy in PetStory.</p>
             <p class="pick_text_3">Even though the zoo has reopened, we need you now more than ever to help us deal with
-                these problems. Please consider a gift to our <a href="#">Emergency Support Fund.</a></p>
+                these problems. Please consider a gift to our <a href="../../pages/donate/donate.html">Emergency Support
+                    Fund.</a></p>
             <h3>How it works</h3>
             <div class="widjet_card">
                 <div class="widjet_card_item">
@@ -233,7 +234,7 @@
                 </p>
             </div>
         </div>
-        <img class="line_scroll" src="../../assets/images/line_scrol.png" alt="line_scroll">
+        <input class="line_scroll" type="range" min="0" max="7" value="0" step="1">
         <button class="button_orange button_orange_testimonials">leave feedback</button>
         <img class="testimonials_flower" src="../../assets/images/leav_foto.png" alt="leav_foto">
     </section>
@@ -242,12 +243,15 @@
             <div class="logo logo_footer">
                 <div class="logo_content">
                     <a href="#">
-                        <h1 class="logo-PetStory">PetStory online</h1>
+                        <h2 class="logo-PetStory">PetStory online</h2>
                         <img class="bamboo" src="../../assets/images/bamboo.svg" alt="bamboo">
                     </a>
                 </div>
             </div>
-            <button class="button_orange button_footer">donate for volunteers</button>
+            <form action="../../pages/donate/donate.html">
+                <button class="button_orange button_footer">donate for
+                    volunteers</button>
+            </form>
             <ul class="footer-buttons">
                 <li class="social-buttons__item"> <img src="../../assets/icons/Facebook.svg" alt="Facebook"> <a
                         class=" icon icon-fb" href="https://www.facebook.com/" target="_blank">Facebook</a></li>
