feat: add basic page layout donate

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -1,1 +1,168 @@
-<h1>Donate page</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Donate</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="../donate/main.js"></script>
+</head>
+
+<body>
+    <header class="header">
+        <div class="logo logo_header">
+            <div class="logo_content">
+                <a href="../../pages/main/index.html">
+                    <h1 class="logo-PetStory">PetStory online</h1>
+                    <img class="bamboo" src="../../assets/images/bamboo.svg" alt="bamboo">
+                </a>
+            </div>
+        </div>
+        <nav class="nav_bar">
+            <ul class="nav_list">
+                <li class="nav_item"> <a class="nav-item__link" href="../../pages/main/index.html">About</a> </li>
+                <li class="nav_item"> <a class="nav-item__link" href="#">Map</a> </li>
+                <li class="nav_item"> <a class="nav-item__link" href="#">Zoos</a> </li>
+                <li class="nav_item"> <a class="nav-item-active__link" href="../../pages/donate/donate.html">Donate</a>
+                </li>
+                <li class="nav_item"> <a class="nav-item__link" href="#">Contact us</a> </li>
+            </ul>
+        </nav>
+        <div class="copyright">
+            <a class="copyright-link" href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
+                target="_blank">Designed by ©</a>
+        </div>
+    </header>
+    <section class="pic_and_feed_a_friend">
+        <div class="panda_bg"></div>
+        <div class="orange_bg">
+            <h3 class="h3_white">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h3>
+            <p class="orange_text">Even though the Zoo has been able to reopen, we are at a greatly reduced capacity
+                with educational
+                programs and public and private events cancelled or postponed for additional months. We need you now
+                more than ever to help ensure that we overcome these challenges. We have been actively raising funds in
+                the community, and we are grateful for the generosity. But much more support is still needed, and we
+                need your help! Please consider a gift today – no matter what size – to help us sustain our mission.</p>
+            <h3 class="h3_orange">Donation Information</h3>
+            <div class="donate_bg">
+                <div class="donate">
+                    <h2>Pick and feed a friend</h2>
+                    <p class="donate_text">We know the animals bring you joy, and in these extraordinary times, we’re
+                        glad.</p>
+                    <div class="donate_panda">
+                        <div class="donate_panda_text">
+                            <p class="text_panda"><span class="four">4</span> <br>Panda diet for the day.</p>
+                            <img class="icon_x" src="../../assets/icons/x_icon.svg" alt="x_icon">
+                        </div>
+                        <img src="../../assets/icons/animals-widget.svg" alt="animals-widget">
+                    </div>
+                    <p class="amount_text">Amount</p>
+                    <div class="progress_bar">
+                        <img class="line" src="../../assets/images/line.png" alt="line">
+                        <form class="form" action="action">
+                            <label class="form-control">
+                                <input class="input" type="radio" name="radio">
+                                $5000
+                            </label>
+                            <label class="form-control">
+                                <input class="input" type="radio" name="radio" checked>
+                                $2000
+                            </label>
+                            <label class="form-control">
+                                <input class="input" type="radio" name="radio" checked>
+                                $1000
+                            </label>
+                            <label class="form-control">
+                                <input class="input" type="radio" name="radio" checked>
+                                $500
+                            </label>
+                            <label class="form-control">
+                                <input class="input" type="radio" name="radio" checked>
+                                $250
+                            </label>
+                            <label class="form-control">
+                                <input class="input" type="radio" name="radio" checked>
+                                $100
+                            </label>
+                            <label class="form-control">
+                                <input class="input" type="radio" name="radio" checked>
+                                $50
+                            </label>
+                            <label class="form-control">
+                                <input class="input" type="radio" name="radio" checked>
+                                $25
+                            </label>
+                        </form>
+                    </div>
+                    <div class="another_amount_wrap">
+                        <input class="input_number" type="number" placeholder="Another amount" onkeydown="limit(this);" onkeyup="limit(this)" >
+                        <form class="form_note" action="action">
+                            <label class="form-control_note">
+                                <input class="input_note" type="radio" name="radio">
+                                Monthly
+                            </label>
+
+                            <label class="form-control_note">
+                                <input class="input_note" type="radio" name="radio" checked>
+                                Once
+                            </label>
+                        </form>
+                        <button class="button_orange button_orange_pick">Feed a friend now</button>
+                        <p>Share with your friends on social networks </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer_left">
+            <div class="logo logo_footer">
+                <div class="logo_content">
+                    <a href="../../pages/main/index.html">
+                        <h2 class="logo-PetStory">PetStory online</h2>
+                        <img class="bamboo" src="../../assets/images/bamboo.svg" alt="bamboo">
+                    </a>
+                </div>
+            </div>
+            <form action="../../pages/donate/donate.html">
+                <button class="button_orange button_footer">donate for
+                    volunteers</button>
+            </form>
+            <ul class="footer-buttons">
+                <li class="social-buttons__item"> <img src="../../assets/icons/Facebook.svg" alt="Facebook"> <a
+                        class=" icon icon-fb" href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+                <li class="social-buttons__item"> <img src="../../assets/icons/Twitter.svg" alt="Twitter"> <a
+                        class=" icon icon-google" href="https://twitter.com/" target="_blank">Twitter</a></li>
+                <li class="social-buttons__item"> <img src="../../assets/icons/Instagram.svg" alt="Instagram"> <a
+                        class=" icon icon-twitter" href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+                <li class="social-buttons__item"> <img src="../../assets/icons/YouTube.svg" alt="YouTube"> <a
+                        class=" icon icon-linkedin" href="https://www.youtube.com/" target="_blank">YouTube</a></li>
+            </ul>
+        </div>
+        <div class="footer_center">
+            <nav class="nav_bar nav_bar_footer">
+                <ul class="nav_list_footer">
+                    <li class="nav_item"> <a class="nav-item-active__link" href="#">About</a> </li>
+                    <li class="nav_item"> <a class="nav-item__link" href="#">Map</a> </li>
+                    <li class="nav_item"> <a class="nav-item__link" href="#">Zoos</a> </li>
+                    <li class="nav_item"> <a class="nav-item__link" href="#">Contact us</a> </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer_right">
+            <h2>Subscribe to our news</h2>
+            <input type="email" placeholder="Enter your email">
+            <button class="button_submit">
+                Submit
+            </button>
+            <div class="copyright_footer">
+                <span>Designed by Alisa Samborskaya ©RSSchool & ©Yem Digital 2021</span>
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
