fix: link about  footer

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -98,7 +98,8 @@
                         </form>
                     </div>
                     <div class="another_amount_wrap">
-                        <input class="input_number" type="number" placeholder="Another amount" onkeydown="limit(this);" onkeyup="limit(this)" >
+                        <input class="input_number" type="number" placeholder="Another amount" onkeydown="limit(this);"
+                            onkeyup="limit(this)">
                         <form class="form_note" action="action">
                             <label class="form-control_note">
                                 <input class="input_note" type="radio" name="radio">
@@ -145,7 +146,8 @@
         <div class="footer_center">
             <nav class="nav_bar nav_bar_footer">
                 <ul class="nav_list_footer">
-                    <li class="nav_item"> <a class="nav-item-active__link" href="#">About</a> </li>
+                    <li class="nav_item"> <a class="nav-item-active__link" href="../../pages/main/index.html">About</a>
+                    </li>
                     <li class="nav_item"> <a class="nav-item__link" href="#">Map</a> </li>
                     <li class="nav_item"> <a class="nav-item__link" href="#">Zoos</a> </li>
                     <li class="nav_item"> <a class="nav-item__link" href="#">Contact us</a> </li>
